--- a/install.html
+++ b/install.html
@@ -34,16 +34,16 @@ Instructions:
   
 <li> 
 Download
-<a href="http://www.splint.org/downloads/splint-3.0.1.5.src.tgz"><em>http://www.splint.org/downloads/splint-3.0.1.5.tgz</em></a>.
+<a href="http://www.splint.org/downloads/splint-3.0.1.6.src.tgz"><em>http://www.splint.org/downloads/splint-3.0.1.6.tgz</em></a>.
  
 </a> (the latest stable release).  
 <p>
 Copy this package to the directory where you want to build Spint.  When
-the tar file is extracted, it will create a splint-3.0.1.5 subdirectory. 
+the tar file is extracted, it will create a splint-3.0.1.6 subdirectory. 
 <p>
-<li><tt>tar xzf splint-3.0.1.5.src.tgz</tt> (extract files from the archive)
+<li><tt>tar xzf splint-3.0.1.6.src.tgz</tt> (extract files from the archive)
 <p>
-<li><tt>cd splint-3.0.1.5</tt> (enter the extracted directory)
+<li><tt>cd splint-3.0.1.6</tt> (enter the extracted directory)
 <p>
 <li><tt>configure</tt>
   <blockquote>
@@ -71,12 +71,12 @@ If the build was successful, it then runs the test
 suite.  You should see:
 <blockquote>
 <pre>
-Testing splint 3.0.1.5...
+Testing splint 3.0.1.6...
 
 Version Info:
-Splint 3.0.1.5 --- 08 Jan 2002
+Splint 3.0.1.6 --- 11 Feb 2002
 
-Maintainer: splint-bug@cs.virginia.edu
+Maintainer: splint-bug@splint.org
 
 <em>... (about 100 lines of test output elided)</em>
 
@@ -112,17 +112,17 @@ configure).
 <blockquote>
 <tt>LARCH_PATH</tt> - path to search for splint libraries and
 initializations files. If you are using the standard directories, this
-should be <tt>.:<em>base-directory</em>/splint-3.0.1.5/lib</tt>.
+should be <tt>.:<em>base-directory</em>/splint-3.0.1.6/lib</tt>.
 <p>
 <tt>LCLIMPORTDIR</tt> - directory containing lcl imports files. If you are using
-the standard directories, this is <tt><em>base-directory</em>/splint-3.0.1.5/imports</tt>.
+the standard directories, this is <tt><em>base-directory</em>/splint-3.0.1.6/imports</tt>.
 </blockquote>
 Put the commands to set these variables (the actual commands will depend
 on the shell you are using) in one of your initialization dotfiles
 (usually <tt>~/.environment</tt>). 
 <p>
 Set up your <tt>PATH</tt> to include the directory containing
-<tt>splint-3.0.1.5/bin/splint</tt>, or move the binary to a directory on
+<tt>splint-3.0.1.6/bin/splint</tt>, or move the binary to a directory on
 your command path.
 <p>
 </blockquote>
