Got rid of outdated mailing list information.

--- a/install.html
+++ b/install.html
@@ -59,13 +59,7 @@ GNU's make utility is required; it may be named
    It is best to do this in an emacs shell or a buffered terminal,
    so you can scroll through the output.
 <p>
-This builds Splint.  While it is building, subscribe to the
-lclint-announce mailing list by sending a message to <a
-href="mailto:majordomo@virginia.edu"><em>majordomo@virginia.edu</em></a>
-containing the body:
-<pre>
-     subscribe lclint-announce
-     </pre>
+This builds Splint.
 <p>
 If the build was successful, it then runs the test
 suite.  You should see:
