Fixed problem with russian characters.

--- a/install.html
+++ b/install.html
@@ -59,7 +59,9 @@ GNU's make utility is required; it may be named
    It is best to do this in an emacs shell or a buffered terminal,
    so you can scroll through the output.
 <p>
-This builds Splint.
+This builds Splint.  While it is building, subscribe to the
+splint-announce mailing list by visiting
+http://www.splint.org/lists.html
 <p>
 If the build was successful, it then runs the test
 suite.  You should see:
@@ -69,7 +71,6 @@ Testing splint 3.1.1...
 
 Version Info:
 Splint 3.1.1 --- 11 Feb 2002
-
 Maintainer: splint-bug@splint.org
 
 <em>... (about 100 lines of test output elided)</em>
